tests/golden/fixtures/syntax-symbolic-subscripts-err-aggregate-expression-index/expected.err
Error: invalid index on symbolic subscript array 'foo'
   ╭─[ tests/golden/fixtures/syntax-symbolic-subscripts-err-aggregate-expression-index/input.k65:6:12 ]
   │
 6 │     lda foo[idx]
   │            ──┬──  
   │              ╰──── here
   │ 
   │ Help: use '.field' or '[.field]' — did you mean '.idx'?
───╯
